# idleGameDiscord

./: main.py  player.py  pyproject.toml  shop.py
discord_bot/: keep_alive.py  main.py  trivia.py
